[project]
name = "igbloks"
version = "1.1a"
description = ""
authors = [
    {name = "ae",email = "85891169+novitae@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml (>=5.3.0,<6.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]
packages = [
    {include = "igbloks"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
orjson = "^3.10.15"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.0.1"

