[project]
name = "igbloks"
version = "1.1a"
description = ""
authors = [
    {name = "ae",email = "85891169+novitae@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)"
]
packages = [
    {include = "igbloks"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pathlib = "^1.0.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.1"
furo = "^2024.8.6"

